--- a/midias/css/estilo.css
+++ b/midias/css/estilo.css
@@ -591,12 +591,24 @@ table{
     background-color: #3D018C;
     text-transform: uppercase;
     color:#fff;
+    max-width: 500px;     
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+     font-size: 12px; 
+     text-transform: uppercase;
 }
 .n_f_nt_p{
-    
+    max-height: 4ch;
     background-color: #39C4BF;
     text-transform: uppercase;  
     color:#fff;
+    max-width: 500px;     
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+     font-size: 12px; 
+     text-transform: uppercase;
 }
 
 .preco_estilo_prod{
