--- a/midias/css/estilo.css
+++ b/midias/css/estilo.css
@@ -1923,7 +1923,9 @@ height: 35px;
    width: 600px;  
    margin-left: 20px; 
    float: left;
-   /* background-color: #ccc; */
+   text-align: center;
+   text-transform: uppercase;
+   font-size: 12px;
    
 }
 
@@ -1941,10 +1943,10 @@ height: 35px;
     margin-left: 20px;
     /* background-color: #0ecc66; */
     max-width: 450px;    
-    
+    border-left: 1px solid #000;
     padding: 4px;
     height: 590px;
-    border:1px dashed rgb(6, 167, 46);
+  
 }
 
 .ver_prod_imagem li{
@@ -1978,7 +1980,7 @@ height: 35px;
     /* background-color: #00C0EF; */
 }
 .id_pg_prod_ver{
-    color:#009999;
+    
     font-size: 12px;
     padding: 5px;
     width: 100px;
@@ -1989,8 +1991,7 @@ height: 35px;
 
 
 .ref_pg_prod{
-    color:#009999;
-    font-size: 12px;
+        font-size: 12px;
     padding: 5px;
     width: 200px;
     float: left;
@@ -1998,7 +1999,7 @@ height: 35px;
 }
 
 .ref_pg_prod_ver{
-    color:#009999;
+    
     font-size: 12px;
     padding: 5px;
     width: 300px;
@@ -2020,11 +2021,10 @@ height: 35px;
 }
 .nome_pg_prod_2{
     float: left;
-    width: 446px;
+    width: 100%;
     color:rgb(0, 0, 0);
-    font-size: 20px;    
-    font-family: cursive;
-    
+    font-size: 16px;    
+    font-family: cursive;    
    margin-left: -5px;
    padding: 5px;
 }
@@ -2032,7 +2032,7 @@ height: 35px;
     text-align: center;
     float: left;
     width: 200px;
-    color:#990000;
+    color:#000;
     /* background-color: #00C0EF  ; */
 }
 .preco_comp_prod{
@@ -2044,10 +2044,9 @@ height: 35px;
 }
 .preco_comp_prod_ver{
     text-align: center;
-
     float: left;
     width: 200px;
-    color:#990000;
+    color:#000;
   
 
     /* background-color: #00C0EF  ; */
@@ -2065,7 +2064,8 @@ height: 35px;
     font-size: 12px;
     float: left;
     margin-left: 5px;
-    color:#009999
+    color:#ccc;
+    text-transform: uppercase;
 }
 
 
@@ -2110,7 +2110,7 @@ height: 35px;
 
 .encapsula_aplic{
     margin-top: 10px;
-    color:#009999;
+   
     float: left;
     /* background-color: #00C0EF; */
     width: 450px;
@@ -2139,7 +2139,7 @@ height: 35px;
     padding: 10px;
     text-align: center;
     font-weight: bolder;
-    color:#009999
+    
 }
 
 .nome_qtde_item1{
@@ -2157,6 +2157,7 @@ height: 35px;
 }
 
 .titulo_dados_prod{
+    margin-top: 20px;
     width: 450px;
     /* background-color: aquamarine; */
     float: left;
@@ -2165,10 +2166,11 @@ height: 35px;
     font-weight: bolder;
     text-align: center;
    font-size: 14px;
-   color:#009999
+   color:#ccc;
 }
 
 .encapsula_precos_dados{
+    color: #ccc;
     text-align: center;
     width: 450px;
     /* background-color: aquamarine; */
@@ -2176,13 +2178,13 @@ height: 35px;
 }
 
 .encapsula_precos_dados p{
-    text-transform: capitalize;
+    text-transform: uppercase;
     width: 450px;
     padding: 5px;
     float: left;
     font-size: 14px;
     text-align: center;
-    color:#009999
+    color:#b7b9b9
 }
 .local_prod_ind{
     margin-top: 10px;
@@ -2195,13 +2197,13 @@ height: 35px;
 
 .nome_loca_prod_ind{
     padding: 5px;   
-    color:#009999;
+    color:#000;
     font-size: 14px;
 }
 
 .local_prod_ind p{
     font-weight: bolder;
-    color:#009999;
+    color:#000;
 }
 
 
