--- a/midias/css/estilo.css
+++ b/midias/css/estilo.css
@@ -1870,6 +1870,210 @@ height: 35px;
      
 }
 
+/* --------------------DAQUI PRA BAIXO PAGINA INDIVIDUAL DE PRODUTOS NA PARTE DE VER ---------- */
+
+.ver_produtos_pg_ver{
+    width: 100%;
+    float: left;
+    height:500px;
+    margin-top: 15px;
+    margin-bottom: 200px;    
+    
+}
+
+
+
+.ver_prod_container_ver{
+    width: 1100px;
+    margin: 0 auto;
+    height: 100%;
+    background-color: #020816;
+    border-radius: 10px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+
+.ver_prod_imagem_ver{
+    /* background-color: red; */
+    margin-left: 5px;
+    width: 40%;
+    height: 100%;
+    color: #fff;
+    float: left;
+}
+
+.img_verprod_ver{
+    /* background-color: #42a52c; */
+    height: 80%;
+}
+.img_verprod_ver article{
+    padding: 5px;
+    text-transform: uppercase;
+   text-align: center;
+   font-size: 16px;
+   font-weight: bolder;
+   text-shadow: 0 10px 20px rgba(131, 220, 255, 0.19), 0 6px 6px rgba(119, 109, 255, 0.23);
+ 
+   
+}
+.img_verprod_ver img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    
+}
+
+.preco_comp_prod_nome_preco_ver{
+/* background-color: #009999; */
+margin-top: 10px;
+width: 45%;
+float: left;
+text-align: center;
+font-size: 16px;
+line-height: 30px;
+color: #fff;
+
+
+}
+
+.preco_vend_prod_nome_preco_ver{
+    margin-top: 10px;
+    /* background-color: #47fdfd; */
+    width: 45%;
+    float: left;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bolder;
+    color: #fff;
+    /* border: 1px solid #fff; */
+    margin-left: 2px;
+    border-radius: 5px;
+    
+}
+
+.id_pg_prod_ver{
+    width: 20%;
+    /* background-color: red; */
+    color:#fff;
+    float: left;
+    padding: 5px;
+    text-transform: uppercase;
+    font-size: 10px;
+}
+
+.ref_pg_prod_ver{
+    width: 70%;
+    /* background-color: #02823e; */
+    color:#fff; 
+    float: left;
+    padding: 5px;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
+.aplic_prod_prod_ver{
+    float: left;
+    background-color: rgb(133, 105, 105);
+    color: #fff;
+    text-transform: capitalize;
+    text-align: center;
+    margin-top: 50px;
+    padding: 5px;
+    font-size: 18px;
+    margin-bottom: 100px;
+    border-radius: 10px;
+}
+
+
+.dados_prod_ver_outro_lado{
+    float: left;
+    margin-left: 5px;
+    width: 29%;
+    height: 100%;
+    /* border-right:1px solid #fff;
+    border-left:1px solid #fff; */
+}
+
+.cat_cat_ver{
+    color:#fff;
+    /* background-color: red; */
+    width: 31%;
+    float: left;
+    text-transform: uppercase;
+    font-size: 11px;
+    padding: 2px;
+    margin-top: 5px;
+    margin-left: 2px;
+}
+.cat_for_ver{
+    color:#fff;
+    /* background-color: red; */
+    width: 31%;
+    float: left;
+    text-transform: uppercase;
+    font-size: 11px;
+    padding: 2px;
+    margin-left: 2px;
+    margin-top: 5px;
+}
+.cat_fab_ver{
+    color:#fff;
+    /* background-color: red; */
+    width: 31%;
+    float: left;
+    text-transform: uppercase;
+    font-size: 11px;
+    padding: 2px;
+    margin-left: 2px;
+    margin-top: 5px;
+}
+
+.nome_loca_prod_ind_ver{
+    text-transform: uppercase;
+    width: 100%;
+    /* background-color: rgb(0, 0, 0); */
+    float: left;
+    margin-top: 50px;      
+    color:#fff;
+    font-size: 14px;
+    text-align: center;
+}
+
+.encapsula_precos_dados_ver{
+    text-transform: uppercase;
+    margin-top: 50px;
+    width: 100%;
+    float: left;
+    /* background-color: #00C0EF; */
+    text-align: center;
+    color:rgb(145, 139, 139);
+}
+
+
+.nome_qtde_item1_ver{
+    margin-top: 20px;
+    color:#fff;
+    text-align: center;
+    padding: 15px;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+.nome_qtde_item2_ver{
+    color:#fff;
+    text-align: center;
+    padding: 15px;
+    text-transform: uppercase;
+}
+.nome_qtde_item3_ver{
+    color:#fff;
+    text-align: center;
+    padding: 15px;
+    text-transform: uppercase;
+}
+
+
+/* --------------------DAQUI PRA BAIXO PAGINA INDIVIDUAL DE PRODUTOS NA PARTE DE VER FIM ---------- */
+
 
 .ver_produtos_pg{
     width: 1200px;
@@ -1877,9 +2081,6 @@ height: 35px;
     height:600px;
     margin-bottom: 200px;
     
-    
-   
-  
 }
 
 
@@ -1893,7 +2094,6 @@ height: 35px;
    /* background-color: #059348; */
    text-transform: uppercase;
 }
-
 
 
 
@@ -1940,12 +2140,11 @@ height: 35px;
 }
 .dados_prod_ver{
     float: left;
-    margin-left: 20px;
-    /* background-color: #0ecc66; */
-    max-width: 450px;    
-    border-left: 1px solid #000;
-    padding: 4px;
-    height: 590px;
+   margin-left: 5px;
+   width: 29%;
+   height: 100%;
+   /* border-right:1px solid #fff;
+   border-left:1px solid #fff; */
   
 }
 
@@ -1979,14 +2178,6 @@ height: 35px;
     float: left;
     /* background-color: #00C0EF; */
 }
-.id_pg_prod_ver{
-    
-    font-size: 12px;
-    padding: 5px;
-    width: 100px;
-    float: left;
-    /* background-color: #00C0EF; */
-}
 
 
 
@@ -1995,16 +2186,6 @@ height: 35px;
     padding: 5px;
     width: 200px;
     float: left;
-    /* background-color: #00C0EF; */
-}
-
-.ref_pg_prod_ver{
-    
-    font-size: 12px;
-    padding: 5px;
-    width: 300px;
-    float: left;
-   
     /* background-color: #00C0EF; */
 }
 
@@ -2019,15 +2200,7 @@ height: 35px;
     font-size: 20px;
     padding: 5px;
 }
-.nome_pg_prod_2{
-    float: left;
-    width: 100%;
-    color:rgb(0, 0, 0);
-    font-size: 16px;    
-    font-family: cursive;    
-   margin-left: -5px;
-   padding: 5px;
-}
+
 .preco_vend_prod{
     text-align: center;
     float: left;
@@ -2042,15 +2215,7 @@ height: 35px;
     color:#009999
     /* background-color: #00C0EF  ; */
 }
-.preco_comp_prod_ver{
-    text-align: center;
-    float: left;
-    width: 200px;
-    color:#000;
-  
 
-    /* background-color: #00C0EF  ; */
-}
 
 .encapsulando_cat_fabr{
     margin-top: 10px;
@@ -2076,21 +2241,12 @@ height: 35px;
     float: left;
     /* background-color: #0ECC66; */
 }
-.encapsula_precos_ver{
-    margin-top: 10px;
-    width: 450px;
-    min-height: 20px;
-    float: left;
-   
-    /* background-color: #0ECC66; */
-}
+
 
 .preco_comp_prod_nome{
     font-size: 12px;
 }
-.preco_comp_prod_nome_ver{
-    font-size: 10px;
-}
+
 
 .preco_comp_prod_nome_preco{
     font-size: 22px;
@@ -2099,9 +2255,7 @@ height: 35px;
 .preco_vend_prod_nome{
     font-size: 12px; 
 }
-.preco_vend_prod_nome_ver{
-    font-size: 10px; 
-}
+
 
 .preco_vend_prod_nome_preco{
     font-size: 35px;
@@ -2212,14 +2366,15 @@ height: 35px;
     
 }
 .bt_edit_pg_prod_ind a{
+    background-color: #ef0000;
     font-size: 12px;
     text-transform: uppercase;
     text-decoration: none;
     color:#009999;
+    padding: 4px;
+    color:#fff;
 }
-.bt_edit_pg_prod_ind a:hover{
-   border-bottom:1px solid #3D018C ;
-}
+
 
 
 
