--- a/midias/css/estilo.css
+++ b/midias/css/estilo.css
@@ -1931,7 +1931,7 @@ float: left;
 text-align: center;
 font-size: 16px;
 line-height: 30px;
-color: #fff;
+color: rgb(255, 8, 8);
 
 
 }
@@ -1942,9 +1942,8 @@ color: #fff;
     width: 45%;
     float: left;
     text-align: center;
-    font-size: 22px;
-    font-weight: bolder;
-    color: #fff;
+    font-size: 25px;    
+    color: rgb(96, 247, 9);
     /* border: 1px solid #fff; */
     margin-left: 2px;
     border-radius: 5px;
@@ -2042,6 +2041,7 @@ color: #fff;
 .encapsula_precos_dados_ver{
     text-transform: uppercase;
     margin-top: 50px;
+    margin-bottom: 50px;
     width: 100%;
     float: left;
     /* background-color: #00C0EF; */
