--- a/midias/css/estilo.css
+++ b/midias/css/estilo.css
@@ -18,10 +18,11 @@ body { overflow-x: hidden; }
         
 }
 .tamanho_caracteres{
-   max-width: 25ch;
+  max-width: 25ch;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap; 
+
 }
 
 #color_preco{
@@ -103,8 +104,8 @@ body { overflow-x: hidden; }
     padding: 5px;
     width: 130px;
     height: 40px;    
-    background-color: rgb(105, 103, 233);
-    color: #FFF;
+    background-color: rgb(119, 118, 118);
+    color: rgb(255, 253, 253);
     text-transform: uppercase;
     text-align: center;
     display: block;
@@ -113,6 +114,8 @@ body { overflow-x: hidden; }
     cursor: pointer;
     float: left;
     border:0;
+    outline: 0;
+    cursor:auto;
 }
 
 
@@ -724,7 +727,7 @@ table{
     text-transform: capitalize;
     font-size: 18px;
     font-family: cursive;
-    padding: 6px;
+    margin-bottom: -100px;
     color: #0b9cc9;
 }
 .op{
@@ -739,7 +742,8 @@ table{
    /* background-color: #0ECC66;  */
     width: 196px;
     float: left;
-    height: 370px;
+    height: 340px;
+    margin-bottom: 10px;
     margin-left: 2px;
     border-radius: 5px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -2132,7 +2136,7 @@ height: 35px;
 
 .img_verprod{
     width: 300px;
-    height: 350px;  
+    height: 300px;  
     margin-left: 20px; 
     float: left;
     text-align: center;
@@ -2215,6 +2219,7 @@ color: rgb(85, 85, 85);
     width: 50%;
     /* background-color: #02823e; */    
     float: left;
+    
     padding: 3px;
     text-transform: uppercase;
     font-size: 14px;
@@ -2365,6 +2370,7 @@ color: rgb(85, 85, 85);
     margin-left: 5px;
     width: 29%;
     height: 100%;
+    
     /* border-right:1px solid #fff;
     border-left:1px solid #fff; */
 }
@@ -2508,12 +2514,12 @@ color: rgb(85, 85, 85);
 
 
 .ver_prod_imagem{
-    margin-top: 35px;
+    margin-top: 35px;    
     float: left;       
     width: 1100px;
     min-height: 300px;
     border-radius: 10px;    
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+   
    
 }
 
@@ -2534,10 +2540,11 @@ color: rgb(85, 85, 85);
 .dados_prod{
     float: left;
     margin-left: 20px;
-    /* background-color: #0ecc66; */
+    background-color:#5A7BC4;
     width: 700px;    
     padding: 4px;
-    height: 590px;
+    height: auto;
+    border-radius: 5px;
    
 }
 .dados_prod_ver{
@@ -2550,7 +2557,7 @@ color: rgb(85, 85, 85);
   
 }
 .posicao_input_envia{
-    background-color: #840b0b;
+    background-color: #0d8054;
   margin-left:100px ;
 }
 
@@ -2587,26 +2594,28 @@ color: rgb(85, 85, 85);
 
 
 
-.ref_pg_prod{
-    text-align: center;
+.ref_pg_prod{   
     font-size: 14px;
-    padding: 2px;
-    text-transform: uppercase;
-    width: 100%;
     float: left;
-    border: 0;
+    text-transform: uppercase;
+    border-radius: 5px;
+    border-color: #fff;;
+    width: 74%;
+    padding: 5px;
     outline: 0;
-    color: #b3aeae;
-    /* background-color: #00C0EF; */
+    margin: 2px;
+
 }
 .dados_prod p{
-    /* background-color: #009999; */
-    padding: 2px;
-    color: #000000;
-    font-size: 12px;
-    width: 100%;
-  text-align: center;
-  text-transform: uppercase;
+    padding: 5px;
+    margin: 2px;
+    /* background-color: #009999; */    
+    color: #ffffff;
+    font-size: 14px;
+    font-family: cursive;
+    float: left;
+    width: 20%;
+    text-transform: uppercase;
 }
 
 .plus_size{
@@ -2935,86 +2944,187 @@ color: rgb(85, 85, 85);
 }
 
 .main_caixa{
-    background-color: #010C26;
+    /* background-color: #a4aec5; */
     margin: 0 auto;
-    width: 1200px;
-}
-
-.main_caixa input{
-    width: 200px;
-   float: left;
-   padding: 2px;
-   text-align: center;
+    width: 85%;
+    min-height: 300px;
 }
 .main_caixa form{
-    margin: 0 auto;
-    width: 1000px;
-    height: 50px;
-   background-color: #637B85;
+    float: left;
+    padding: 2px;
+    min-height: 400px;
+    width: 25%;
+    background-color: #5a7bc4;
+    border-radius:5px; 
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
    
 }
 
-.data_caixa{
-    width: 200px;
-    height: 50px;
-    float: left;
+
+.alinha_inputs_data{
+    width: 90%;
+    height: auto;
+    /* background-color: #808181; */
+    margin: 0 auto;
+ 
     
 }
-.data_caixa p{
-    background-color: red;
-    width: 200px;
-    text-align: center;
+.alinha_inputs_data p{
+    color:#fff;
+    padding: 2px;
+    font-size: 14px;
+    font-family: cursive;
+    text-transform: uppercase;
+   text-align: center;
     
 }
 
-.desc_caixa{
-    width: 200px;
-    height: 50px;
-    float: left;
+.inputs_inser_caixa {
+    padding: 5px;
 }
-.desc_caixa p{
-    background-color: red;
-    width: 200px;
+.inputs_inser_caixa input{
+    float: left;
+    color:#3D018C;
+    border-radius: 5px;   
+    height: 30px;
+    width: 100%;
+    border:1px solid #fff;
+    outline: 0;
     text-align: center;
 }
-.valor_caixa{
-    width: 200px;
-    height: 50px;
+inputs_inser_caixa p{
+    
     float: left;
+    
 }
-.valor_caixa p{
-    background-color: red;
-    width: 200px;
+.option_caixa select{
+    float: left;
     text-align: center;
-}
-.option_caixa{
-    width: 200px;
-    height: 50px;
-    float: left;
+    border:1px solid #fff;
+    border-radius: 5px;
+    height: 30px;
+    width: 100%;
+    outline: 0;
+    color:#3D018C;
 }
 
-.bt_enviar_caixa{
-    width: 200px;
+.estilo_bt_env_caixa input{
+    margin-top: 5px;
     height: 50px;
-    float: left;
+    transition: 1s;
+    border:0 !important;
+    color:#fff;
+    background-color: #030442;
+}
+.estilo_bt_env_caixa input:hover{
+    transition: 1s;
+    border:0 !important;
+    color:#030442;
+    background-color: #ddddf3;
 }
 
 .tabela_caixa{
-    margin: 0 auto;
-    width: 1200px;
-    /* background: #08ad55; */
+    margin-bottom: 50px;
+    float: left;
+    margin-left: 20px;
+    padding: 2px;
+    height: auto;
+    width: 68%;
+    background-color: #a5bbf3;
+    border-radius:5px; 
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+
 }
 
-.tabela_caixa thead{
-    width: 1100px;
-    background-color: #00C0EF;
-    margin-bottom: 5px;
+.tabela_caixa h3{
+    margin: 0 auto;
+    width: 200px;
+    border:1px solid rgb(2, 140, 253);
+    color: rgb(111, 32, 240);
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.exibir_soma{
+    
+     
+   
+}
+.exibir_soma p{
+    margin: 0 auto;
+    text-align: center;
+    width: 300px;
+    padding: 5px;
+    background-color: rgb(6, 156, 14);
+    color:#fff;
+    font-size: 14px;
+    font-family: cursive;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    
+}
+
+#exibir_soma_negativa p{
+    margin: 0 auto;
+    text-align: center;
+    width: 300px;
+    padding: 5px;
+    background-color: rgb(255, 0, 0);
+    color:#fff;
+    font-size: 14px;
+    font-family: cursive;
+    margin-bottom: 20px;
+    border-radius: 2px;
+}
+
+
+.tabela_caixa table{
+    margin: 0 auto;
+    width: 97%;
+    text-transform: capitalize;
+    
 }
 .tabela_caixa th{
     padding: 5px;
-    width: 200px;
-    text-transform: uppercase;
-    font-weight: normal;
+   text-transform: uppercase;
+   font-size: 12px;
+   font-family: cursive;   
+   color:#020574
+}
+
+.h3_tabel_a_lancar{
+    width: 700px !important;
+}
+
+.cor_a_lancar_caixa{
+    background-color: #bfc0ff !important;
+
+}
+
+.tamanho_checkbox_caixa input{
+    width: 20px !important;
+    margin-left: 10px;
+} 
+.tamanho_checkbox_caixa label{
+    color:#fff;
+    font-family: cursive;
+}
+.opflutuante{
+  
+    position: absolute;    
+    margin-top: -120px;
+    margin-left: 164px;
+}
+.opflutuante a{
+    
+    width: 50px;
    
 }
 
+.opflutuante img{
+    margin-left: 10px;
+    margin-top: -20px;
+    width: 30px;
+    margin: 1px;
+    
+}
